<resources>
    <string name="app_name">FilmInfo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film">Film name</string>
    <string name="release">Release</string>
    <string name="description">Description</string>
    <string name="director">Director</string>
    <string name="score">Score</string>
    <string name="producer">Producer</string>
</resources>
