<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".FilmInfoFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/tw_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/film"
        android:padding="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/tw_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/release"
        android:padding="16dp"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tw_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:padding="16dp"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tw_director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/director"
        android:padding="16dp"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tw_producer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/producer"
        android:padding="16dp"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tw_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/score"
        android:padding="16dp"
        android:textSize="20sp"
        android:gravity="center" />

    </LinearLayout>


    </ScrollView>